refactor: every package keeps its own assets, and a jar carries all of them
Moving the browser's assets out of the shipped tree fixed the leak and
left the mechanism that caused it standing. This finishes it.

Turbo and Stimulus move to `src/web/assets/hotwired`, the cable's
controller to `src/web/cable/assets`, and the components' stylesheet to
`src/web/ui/assets`. There is no top-level `assets/` any more, so there is
nothing left to enumerate: `Bundled.shipped()` is gone, and with it the
`tuul.assets` property, the two-levels-up path hack, and the rule that a
directory was on every application's load path because of where it sat.
A package that ships an asset says where it is — `Ui.assets()`,
`Cable.assets()` — and an application names the ones it uses, exactly as
it already names their modules in the import map. `Assets.standard` adds
only Hotwired, which `web.assets` owns, so nothing here imports the
packages built on top of it.

The payoff is that a jar is now enough. Assets sit beside the classes of
the package that ships them, so `build/classes` already holds them and
`mise run dist` no longer adds a separate tree; `mise run install` no
longer copies one next to the launcher; and `tuul install` no longer
hands a project `vendor/tuul/assets/` beside a jar that already carried a
copy. `Home.web()` and `Home.ASSETS` are gone. `Install.pack` had been
taking only `.class` files out of a checkout, which would have dropped
them, so it takes the whole classes tree — that is the runtime payload,
and a jar without its stylesheet is a jar whose pages have no design.

Checked by running the distribution from an empty directory: `tuul.jar`
alone, no `assets/` anywhere, serves the browser's stylesheet, the
cable's controller, the components' stylesheet, Turbo and Stimulus, all
200, and `browser.css` digests to the same sixteen characters it does in
the checkout. Before this, the jar contained a copy of `assets/` that
nothing ever read, because the lookup went to the direct