@@ -8,32 +8,36 @@ import java.nio.file.FileSystemAlreadyExistsException;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.List;
+import java.nio.file.Paths;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
 
-/// Where assets are, when nobody has said where they are.
+/// Assets that travel with the code that uses them.
 ///
-/// An asset load path is a directory, and a directory is a [Path] — but a
-/// [Path] does not have to be on the disk the program started from. A jar is a
-/// file system too, so the same code finds `browser/assets` in a checkout and
-/// inside `tuul.jar`, and neither the pipeline nor the application has to know
-/// which one it got.
+/// A package that ships a stylesheet or a controller keeps it in a directory
+/// beside its own source, and asks for it here. `web.ui` has `src/web/ui/assets`
+/// and the browser has `src/browser/assets`, and neither has to know where the
+/// other keeps anything.
 ///
-/// Two things travel this way, and they are not the same thing:
+/// ```
+/// Assets.standard(List.of(Bundled.of(Browser.class, "assets"), Ui.assets()));
+/// ```
 ///
-///   - **What an application ships.** Its assets belong to it, so they live
-///     beside its code and are found from its code. [#of(Class, String)].
-///   - **What tuul ships.** Turbo, Stimulus, the cable's controller and the
-///     component stylesheet, which every application gets without asking.
-///     [#shipped()].
+/// The build copies everything under `src` that is not Java beside the classes
+/// it compiled, and a jar keeps that arrangement, so `src/web/ui/assets` is
+/// `web/ui/assets` in both. That is the whole reason this exists: an asset load
+/// path is a [Path], and a [Path] does not have to be on the disk the program
+/// started from. A jar is a file system too, so one lookup finds a checkout's
+/// files and an installed tuul's, and `tuul.jar` copied somewhere on its own
+/// still knows what it carries.
 ///
-/// Keeping them apart is the point. They used to be one tree, so an
-/// application's own stylesheet was handed to every other application that
-/// ever used tuul, and the four provenance files in it collapsed into
-/// whichever one sorted first.
+/// This replaced a single tree of everything, enumerated by listing whatever
+/// sat beside the vendored Turbo. That could not tell what a package ships from
+/// what an application ships, so a browser's stylesheet was handed to every
+/// application anybody wrote — and since logical names are relative to each
+/// load path root, the four `ORIGIN.md` files in it collapsed into whichever
+/// sorted first. Assets belong to the code they came with.
 public final class Bundled {
 
     /// Open archives, kept for the life of the process.
@@ -44,87 +48,19 @@ public final class Bundled {
     /// per jar, and a program has one or two.
     private static final Map<Path, FileSystem> ARCHIVES = new ConcurrentHashMap<>();
 
-    private static final String DIRECTORY = "assets";
-
     private Bundled() {}
 
-    /// The directory of assets that travels with `owner`, named `directory`
-    /// and sitting beside `owner`'s package.
-    ///
-    /// ```
-    /// Assets.standard(List.of(Bundled.of(Browser.class, "assets")));
-    /// ```
-    ///
-    /// The build copies everything under `src` that is not Java beside the
-    /// classes it compiled, and a jar keeps that arrangement, so
-    /// `src/browser/assets` is `browser/assets` in both — one name, two file
-    /// systems.
+    /// The directory named `directory`, beside `owner`'s package, in whatever
+    /// file system `owner` was loaded from.
     ///
     /// A path is answered even when there is nothing at it, because a load path
-    /// that does not exist is skipped by the scan, and a caller reading the
+    /// that does not exist is skipped by the scan, and somebody reading the
     /// error from a missing asset is better off seeing where it was looked for.
     public static Path of(Class<?> owner, String directory) {
         var pkg = owner.getPackageName().replace('.', '/');
         return root(owner)
                 .map(root -> root.resolve(pkg).resolve(directory))
-                .orElseGet(() -> Path.of(pkg, directory));
-    }
-
-    /// Every directory of assets tuul ships: Turbo and Stimulus, the cable's
-    /// controller, the components' stylesheet, and whatever ships later.
-    ///
-    /// They are enumerated rather than named, so a package that ships assets
-    /// does not have to be known here — `web.assets` would otherwise import
-    /// `web.cable` to put its one file on the load path, which is backwards.
-    /// What may be enumerated is exactly what tuul ships: an application's
-    /// assets live with the application and reach the pipeline through
-    /// [#of(Class, String)].
-    public static List<Path> shipped() {
-        var root = root();
-        if (!Files.isDirectory(root)) return List.of(root);
-        try (var directories = Files.list(root)) {
-            var found = directories.filter(Files::isDirectory).sorted().toList();
-            return found.isEmpty() ? List.of(root) : found;
-        } catch (IOException unreadable) {
-            return List.of(root);
-        }
-    }
-
-    /// One directory tuul ships, by name.
-    ///
-    /// A package that ships assets asks for its own by name rather than
-    /// working out where it is, which is why nothing but this has to know how
-    /// tuul finds what it carries.
-    public static Path shipped(String name) {
-        return root().resolve(name);
-    }
-
-    /// The directory holding what tuul ships. When nothing is found, the last
-    /// candidate is answered anyway: an import map that cannot resolve a pin
-    /// says which directories it looked in, and a path that does not exist is
-    /// more use in that message than no path at all.
-    private static Path root() {
-        var candidates = candidates();
-        return candidates.stream().filter(Files::isDirectory).findFirst().orElse(candidates.getLast());
-    }
-
-    private static List<Path> candidates() {
-        var override = System.getProperty("tuul.assets");
-        if (override != null) return List.of(Path.of(override));
-        var candidates = new ArrayList<Path>();
-        root(Bundled.class).map(root -> root.resolve(DIRECTORY)).ifPresent(candidates::add);
-        beside().ifPresent(candidates::add);
-        candidates.add(Path.of(DIRECTORY));
-        return List.copyOf(candidates);
-    }
-
-    /// A jar carries them inside it, and an installed tuul also has them
-    /// unpacked beside it. Inside comes first: a jar that is copied somewhere
-    /// on its own still knows what it ships.
-    private static Optional<Path> beside() {
-        return code(Bundled.class).map(code -> Files.isDirectory(code)
-                ? code.getParent().getParent().resolve(DIRECTORY)
-                : code.getParent().resolve(DIRECTORY));
+                .orElseGet(() -> Paths.get(pkg, directory));
     }
 
     /// The root of the file system `owner` was loaded from: the directory of
